# NUPACK

./: README.md
src/: LICENSE  (+4 more)
src/source/: .dockerignore  CMakeLists.txt  LICENSE.txt  README.txt
src/source/bind/: Bind.h  Constants.cc  Core.cc  Core.h  Design.cc  Design.h  Document.cc  Math.cc  Math.h  Model.cc  Model.h  Thermo.cc  Thermo.h  Thermo2.cc
src/source/cmake/: BuildCXX.cmake  BuildPython.cmake  Contents.cmake  Libraries.cmake  Options.cmake
src/source/include/nupack/: Forward.h  Version.h.in
src/source/include/nupack/algorithms/: Constants.h  Extents.h  Functor.h  Macro.h  Numeric.h  Operators.h  Pack.h  Partition.h  Traits.h  Tuple.h  TypeSupport.h  Utility.h
src/source/include/nupack/common/: Config.h  Constants.h  Costs.h  Error.h  Random.h  Runtime.h  Threading.h
src/source/include/nupack/concentration/: Equilibrate.h  Solve.h
src/source/include/nupack/design/: Archive.h  Complex.h  Constraints.h  Decomposition.h  Defect.h  Design.h  DesignComponents.h  DesignParameters.h  Designer.h  Granularity.h  Logging.h  Models.h  Objectives.h  OutputResult.h  Result.h  SequenceAdapter.h  Specification.h  Split.h  ThermoWrapper.h  Tube.h  TypeImports.h  Weights.h
src/source/package/: info.py  python.dockerfile  setup.py
src/source/parameters/: dna04-nupack3.json  dna04.json  rna06.json  rna95-nupack3.json  rna95.json  rna99-nupack3.json  rna99.json
src/source/source/: ComplexSet.cc  Concentration.cc  Config.cc  Constants.cc  Costs.cc  Domain.cc  Loop.cc  Model.cc  Partition.cc  Runtime.cc  State.cc  Structure.cc  Types.cc  Utility.cc
src/source/source/custom_csp/: constraint_handler.cc  sequence_utils.cc
src/source/source/design/: Archive.cc  Complex.cc  Constraints.cc  Decomposition.cc  Defect.cc  Design.cc  DesignComponents.cc  Designer.cc  Granularity.cc  Models.cc  Objectives.cc  OutputResult.cc  Result.cc  SequenceAdapter.cc  Specification.cc  Split.cc  ThermoWrapper.cc  Tube.cc  Unused_Constraint_code.cc  Weights.cc  temporarily_unused_code.cc
src/source/test/python/: __init__.py  conftest.py  test_analysis.py  test_concentration.py  test_design.py  test_model.py  test_notebooks.py  test_utilities.py
src/src/: CMakeLists.txt  Makefile  shared.h
src/src/design/design_pfunc_utils/: Makefile  nsStar_psStar.c
src/src/design/single-complex/: CMakeLists.txt  Makefile  design.c  design_engine.c  read_command_line.h
src/src/design/testtube/: CMakeLists.txt
src/src/shared/: Makefile  constants.h  externals.c.in  externals.h  hash.c  utils.c
src/src/shared/rng/: Makefile  mt19937  mt19937ar.h
src/src/thermo/: CMakeLists.txt  Makefile
src/src/thermo/basics/: CMakeLists.txt  Makefile  count.c  defect.c  mfe_mpi.c  pairs.c  pairs_mpi.c  pfunc.c  pfunc_mpi.c  sample.c  utils_mpi.c
src/src/thermo/complexes/: Makefile  complexes.c  permBG.c
src/src/thermo/concentrations/: CalcConc.c  ConcentrationsHeaderFile.h  FracPair.c  InputFileReader.c  Makefile  OutputWriter.c  ReadCommandLine.c  concentrations.c
src/src/thermo/core/: ReadCommandLineNPK.c  ene.c  init.c  pairsPr.c  pf.c
src/src/thermo/distributions/: InputFileReader.c  Makefile
src/src/thermo/utils/: GetEnergy.c  Makefile  backtrack.c  ene.c  ene_old.c  init.c  mfeUtils.c  pairsPr.c  pfuncUtils.c  pfuncUtilsConstants.h  pfuncUtilsHeader.h  sumexp.c
(+320 files in other folders)
